[gd_scene load_steps=3 format=3 uid="uid://b2k7h6r5tkcvg"]

[ext_resource type="Script" path="res://ui/popups/marketplace_popup.gd" id="1_hkjhb"]
[ext_resource type="Texture2D" uid="uid://bgmu14jk8bck8" path="res://assets/ui_v2.png" id="1_rur1u"]

[node name="MarketplacePopup" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hkjhb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("1_rur1u")
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Marketplace"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="ResourceGive" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "Wood"
popup/item_1/text = "Metal"
popup/item_1/id = 1
popup/item_2/text = "Coal"
popup/item_2/id = 2
popup/item_3/text = "Psi Crystal"
popup/item_3/id = 3
popup/item_4/text = "Gasoline"
popup/item_4/id = 4
popup/item_5/text = "Silicon"
popup/item_5/id = 5
popup/item_6/text = "Credits"
popup/item_6/id = 6

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = " -> "

[node name="ResourceTake" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "Wood"
popup/item_1/text = "Metal"
popup/item_1/id = 1
popup/item_2/text = "Coal"
popup/item_2/id = 2
popup/item_3/text = "Psi Crystal"
popup/item_3/id = 3
popup/item_4/text = "Gasoline"
popup/item_4/id = 4
popup/item_5/text = "Silicon"
popup/item_5/id = 5
popup/item_6/text = "Credits"
popup/item_6/id = 6

[node name="ResourceGiveCount" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="ResourceTakeCount" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Y"
horizontal_alignment = 1

[node name="Ratio" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ratio: X : Y"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
rounded = true

[node name="Total" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Total: A : B"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonExit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="ButtonTrade" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Trade"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/ResourceGive" to="." method="_on_resource_give_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/ResourceTake" to="." method="_on_resource_take_item_selected"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ButtonTrade" to="." method="_on_button_trade_pressed"]
